--- a/gpslog/package.json
+++ b/gpslog/package.json
@@ -12,6 +12,7 @@
     "exponent": "10.0.0",
     "react": "15.3.1",
     "react-native": "github:exponentjs/react-native#sdk-10.0.0",
+    "realm": "^0.14.3",
     "redux": "^3.6.0"
   }
 }
