--- a/gpslog/package.json
+++ b/gpslog/package.json
@@ -18,6 +18,8 @@
     "babel-preset-react-native": "1.9.0",
     "jest": "16.0.2",
     "jest-react-native": "16.0.0",
-    "react-test-renderer": "15.3.2"
+    "react-test-renderer": "15.3.2",
+    "realm": "^0.14.3",
+    "redux": "^3.6.0"
   }
 }
