--- a/gpslog/package.json
+++ b/gpslog/package.json
@@ -23,6 +23,12 @@
     "babel-preset-react-native": "^1.9.0",
     "jest": "^16.0.2",
     "jest-react-native": "^16.0.0",
-    "react-test-renderer": "^15.3.2"
+    "react-test-renderer": "^15.3.2",
+    "babel-eslint": "^7.0.0",
+    "eslint": "^3.3.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.1.1"
   }
 }
