--- a/gpslog/package.json
+++ b/gpslog/package.json
@@ -7,28 +7,22 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "^15.3.2",
-    "react-native": "^0.36.0",
+    "react": "15.3.2",
+    "react-native": "^0.37.0",
+    "react-native-maps": "^0.11.0",
+    "react-native-permissions": "^0.2.5",
     "react-redux": "^4.4.5",
-    "realm": "^0.14.3",
-    "redux": "^3.6.0",
-    "redux-actions": "^0.11.0",
-    "redux-thunk": "^2.1.0"
+    "redux": "^3.5.2"
   },
   "jest": {
     "preset": "jest-react-native"
   },
   "devDependencies": {
-    "babel-jest": "^16.0.0",
-    "babel-preset-react-native": "^1.9.0",
-    "jest": "^16.0.2",
-    "jest-react-native": "^16.0.0",
-    "react-test-renderer": "^15.3.2",
-    "babel-eslint": "^7.0.0",
-    "eslint": "^3.3.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-react": "^6.1.1"
+    "babel-jest": "17.0.2",
+    "babel-preset-react-native": "1.9.0",
+    "jest": "17.0.3",
+    "jest-react-native": "17.0.3",
+    "react-test-renderer": "15.3.2",
+    "whatwg-fetch": "^2.0.0"
   }
 }
