--- a/gpslog/package.json
+++ b/gpslog/package.json
@@ -12,7 +12,9 @@
     "react-native-maps": "^0.11.0",
     "react-native-permissions": "^0.2.5",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-logger": "^2.8.1",
+    "redux-thunk": "^2.2.0"
   },
   "jest": {
     "preset": "jest-react-native"
